src/bibtex2rdf/src/bibtex/rdf/labeling/LabelPatternParser.java
/* Generated By:JavaCC: Do not edit this line. LabelPatternParser.java */
package bibtex.rdf.labeling;

import bibtex.dom.BibtexEntry;
import java.io.StringReader;
import bibtex.util.BibtexUtil;


public class LabelPatternParser implements LabelPatternParserConstants {
    private String pattern;

    public LabelPatternParser(String pattern){
        this(new StringReader(pattern));
        this.pattern = pattern;
    }

    public String getLabel(BibtexEntry entry){
        String label = "";
        try {
                StringReader input = new StringReader(pattern);
                ReInit(input);
            label = Label(entry);
        } catch (Exception e) {
            e.printStackTrace();
        }
        return label;
    }


        private String getContent(BibtexEntry entry, String fieldName) {
        String content;
        if(fieldName.equals("author")||fieldName.equals("editor")){
            content = BibtexUtil.getNameList(entry, fieldName, ", ");
        } else {
            content = BibtexUtil.getValue(entry, fieldName);
        }
        if ( content == null ) {
                content = "";
        }
        return content;
        }

  final public String Label(BibtexEntry entry) throws ParseException {
        String label ="";
        String sublabel;
    label = PatternPart(entry);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      jj_consume_token(PLUS);
      sublabel = PatternPart(entry);
                label = label + sublabel;
    }
                {if (true) return label;}
    throw new Error("Missing return statement in function");
  }

  final public String PatternPart(BibtexEntry entry) throws ParseException {
                String label = "";
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STRING:
      label = Literal();
      break;
    case LT:
        String fieldName;
      fieldName = Field();
        label = getContent(entry, fieldName);
      break;
    case LPAREN:
      label = CompositePart(entry);
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return label;}
    throw new Error("Missing return statement in function");
  }

  final public String CompositePart(BibtexEntry entry) throws ParseException {
                String label = "";
                String fieldName;
    jj_consume_token(LPAREN);
    fieldName = Field();
    jj_consume_token(COLON);
    label = Label(entry);
    jj_consume_token(RPAREN);
                if (getContent(entry, fieldName) == "") {
                        label = "";
                }
                {if (true) return label;}
    throw new Error("Missing return statement in function");
  }

  final public String Field() throws ParseException {
                String fieldName;
                Token fieldNameToken;
    jj_consume_token(LT);
    fieldNameToken = jj_consume_token(NAME);
                fieldName = fieldNameToken.image;
    jj_consume_token(GT);
                {if (true) return fieldName;}
    throw new Error("Missing return statement in function");
  }

  final public String Literal() throws ParseException {
                Token literalToken ;
    literalToken = jj_consume_token(STRING);
                {if (true) return literalToken.image.substring(1, literalToken.image.length()-1);}
    throw new Error("Missing return statement in function");
  }

  public LabelPatternParserTokenManager token_source;
  JavaCharStream jj_input_stream;
  public Token token, jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[2];
  static private int[] jj_la1_0;
  static {
      jj_la1_0();
   }
   private static void jj_la1_0() {
      jj_la1_0 = new int[] {0x20,0x200a,};
   }

  public LabelPatternParser(java.io.InputStream stream) {
     this(stream, null);
  }
  public LabelPatternParser(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new JavaCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new LabelPatternParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  public LabelPatternParser(java.io.Reader stream) {
    jj_input_stream = new JavaCharStream(stream, 1, 1);
    token_source = new LabelPatternParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  public LabelPatternParser(LabelPatternParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  public void ReInit(LabelPatternParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  final private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }

  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  final private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.Vector jj_expentries = new java.util.Vector();
  private int[] jj_expentry;
  private int jj_kind = -1;

  public ParseException generateParseException() {
    jj_expentries.removeAllElements();
    boolean[] la1tokens = new boolean[14];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 2; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 14; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.addElement(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = (int[])jj_expentries.elementAt(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  final public void enable_tracing() {
  }

  final public void disable_tracing() {
  }

}
